@@ -3,6 +3,9 @@
 	* style/style.css,
 	  req/Handler/Read.php,
 	  req/Visualizer/Read/Success.php: 作品閲覧不可設定時に投稿時エラーとして表示されてしまうのを修正
+	* req/Core/Visualizer.php,
+	  req/Model/ThreadEntry.php,
+	  req/Visualizer/Index/Search.php: 検索が各種非表示設定を反映しないのを修正
 
 2011-06-12 COAH96KoxU <queue glasscore.net>
 
